Additionally push images to wodby registry

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,8 @@ env:
   ALPINE_VER: 3.13
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  WODBY1_REGISTRY_USERNAME: ${{ secrets.WODBY1_REGISTRY_USERNAME }}
+  WODBY1_REGISTRY_PASSWORD: ${{ secrets.WODBY1_REGISTRY_PASSWORD }}
 
 jobs:
   nginx-120:
