--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,7 +41,7 @@ jobs:
     - uses: ./.github/actions
       with:
         version: 1.20.1
-        tags: 1.20
+        tags: '1.20'
         platform: linux/amd64,linux/arm64
   nginx-119:
     runs-on: ubuntu-latest
