--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,9 +12,6 @@ env:
   BASE_IMAGE_STABILITY_TAG: 2.10.6
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  NGINX121: '1.21.6'
-  NGINX120: '1.20.2'
-  NGINX119: '1.19.10'
 
 jobs:
   nginx-121:
@@ -27,10 +24,9 @@ jobs:
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
-        version: ${{ env.NGINX121 }}
+        version: '1.21.6'
         tags: 1.21,1,latest
         platform: linux/amd64,linux/arm64
-        alpine_ver: 3.15
   nginx-120:
     runs-on: ubuntu-latest
     steps:
@@ -41,10 +37,9 @@ jobs:
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
-        version: ${{ env.NGINX120 }}
+        version: '1.20.2'
         tags: '1.20'
         platform: linux/amd64,linux/arm64
-        alpine_ver: 3.15
   nginx-119:
     runs-on: ubuntu-latest
     steps:
@@ -55,49 +50,6 @@ jobs:
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
-        version: ${{ env.NGINX119 }}
+        version: '1.19.10'
         tags: 1.19
         platform: linux/amd64,linux/arm64
-        alpine_ver: 3.15
-  nginx-121-alpine313:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
-      with:
-        platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.NGINX121 }}
-        tags: 1.21-alpine3.13,1-alpine3.13,alpine3.13
-        platform: linux/amd64,linux/arm64
-        alpine_ver: 3.13
-  nginx-120-alpine313:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
-      with:
-        platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.NGINX120 }}
-        tags: 1.20-alpine3.13
-        platform: linux/amd64,linux/arm64
-        alpine_ver: 3.13
-  nginx-119-alpine313:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-qemu-action@v1
-      with:
-        platforms: amd64,arm64
-    - uses: docker/setup-buildx-action@v1
-    - uses: ./.github/actions
-      with:
-        version: ${{ env.NGINX119 }}
-        tags: 1.19-alpine3.13
-        platform: linux/amd64,linux/arm64
-        alpine_ver: 3.13
