--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,32 @@ env:
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
+  nginx-123:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v1
+      with:
+        platforms: amd64,arm64
+    - uses: docker/setup-buildx-action@v1
+    - uses: ./.github/actions
+      with:
+        version: '1.23.0'
+        tags: 1.23,1,latest
+        platform: linux/amd64,linux/arm64
+  nginx-122:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v1
+      with:
+        platforms: amd64,arm64
+    - uses: docker/setup-buildx-action@v1
+    - uses: ./.github/actions
+      with:
+        version: '1.22.2'
+        tags: '1.22'
+        platform: linux/amd64,linux/arm64
   nginx-121:
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +51,7 @@ jobs:
     - uses: ./.github/actions
       with:
         version: '1.21.6'
-        tags: 1.21,1,latest
+        tags: '1.21'
         platform: linux/amd64,linux/arm64
   nginx-120:
     runs-on: ubuntu-latest
