Add support for robots.txt, humans.txt and ads.txt in Drupal presets #43

--- a/tests/drupal/9/docker-compose.yml
+++ b/tests/drupal/9/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   nginx:
     image: $IMAGE
     environment:
+      DEBUG: 1
       NGINX_BACKEND_HOST: drupal
       NGINX_VHOST_PRESET: drupal9
       NGINX_SERVER_EXTRA_CONF_FILEPATH: /var/www/html/server.conf
