--- a/tests/matomo/compose.yml
+++ b/tests/matomo/compose.yml
@@ -1,17 +1,16 @@
-version: "2"
-
 services:
   nginx:
     image: $IMAGE
     environment:
-      NGINX_BACKEND_HOST: wordpress
-      NGINX_VHOST_PRESET: wordpress
+      NGINX_BACKEND_HOST: matomo
+      NGINX_VHOST_PRESET: matomo
+      DEBUG: 1
     depends_on:
-      - wordpress
+      - matomo
     volumes:
       - codebase:/var/www/html
-  wordpress:
-    image: wodby/wordpress
+  matomo:
+    image: wodby/matomo
     environment:
       WODBY_APP_NAME: test
     volumes:
