--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,23 +12,19 @@ env:
   BASE_IMAGE_STABILITY_TAG: 2.16.4
   NGINX127: '1.27.4'
   NGINX126: '1.26.3'
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
   nginx127-build:
     strategy:
       matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
+        arch:
+          - amd64
+          - arm64
         include:
-          - platform: linux/amd64
+          - arch: amd64
             runner: ubuntu-24.04
-            arch: amd64
-          - platform: linux/arm64
+          - arch: arm64
             runner: ubuntu-24.04-arm
-            arch: arm64
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
@@ -36,16 +32,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/setup-buildx-action@v3
       - name: build and push
         env:
           NGINX_VER: ${{ env.NGINX127 }}
           ARCH: ${{ matrix.arch }}
-          PLATFORM: ${{ matrix.platform }}
         run: |
-          make buildx-build
+          make
           make test
-          make buildx-push
+          make push
   nginx127-push:
     runs-on: ubuntu-latest
     needs:
@@ -65,16 +59,14 @@ jobs:
   nginx126-build:
     strategy:
       matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
+        arch:
+          - amd64
+          - arm64
         include:
-          - platform: linux/amd64
+          - arch: amd64
             runner: ubuntu-24.04
-            arch: amd64
-          - platform: linux/arm64
+          - arch: arm64
             runner: ubuntu-24.04-arm
-            arch: arm64
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
@@ -82,16 +74,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/setup-buildx-action@v3
       - name: build and push
         env:
           NGINX_VER: ${{ env.NGINX126 }}
           ARCH: ${{ matrix.arch }}
-          PLATFORM: ${{ matrix.platform }}
         run: |
-          make buildx-build
+          make
           make test
-          make buildx-push
+          make push
   nginx126-push:
     runs-on: ubuntu-latest
     needs:
