--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,10 +10,53 @@ on:
 
 env:
   BASE_IMAGE_STABILITY_TAG: 2.16.4
+  NGINX128: '1.28.0'
   NGINX127: '1.27.5'
   NGINX126: '1.26.3'
 
 jobs:
+  nginx128-build:
+    strategy:
+      matrix:
+        arch:
+          - amd64
+          - arm64
+        include:
+          - arch: amd64
+            runner: ubuntu-24.04
+          - arch: arm64
+            runner: ubuntu-24.04-arm
+    runs-on: ${{ matrix.runner }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: build and push
+        env:
+          NGINX_VER: ${{ env.NGINX128 }}
+          ARCH: ${{ matrix.arch }}
+        run: |
+          make
+          make test
+          make push
+  nginx128-push:
+    runs-on: ubuntu-latest
+    needs:
+      - nginx127-build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: ./.github/actions
+        with:
+          version: ${{ env.NGINX128 }}
+          latest: true
+          latest_major: true
+  
   nginx127-build:
     strategy:
       matrix:
@@ -53,8 +96,6 @@ jobs:
       - uses: ./.github/actions
         with:
           version: ${{ env.NGINX127 }}
-          latest: true
-          latest_major: true
 
   nginx126-build:
     strategy:
